@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                DashProfiler
-version:             1.11
+version:             1.12
 abstract:            
 license:             ~
 author:              
