@@ -9,6 +9,9 @@ use Data::Dumper;
 use DashProfiler::Core;
 $|=1;
 
+my ($sample_overhead_time, $sample_inner_time)
+      = DashProfiler::Core->estimate_sample_overheads();
+
 print "-- period_exclusive\n";
 my $dp = DashProfiler::Core->new("dp_ex", {
     granularity => 1_000_000_000,
@@ -27,14 +30,17 @@ like $text, qr/^dp_ex>1000000000>c1>c2: dur=0.\d+ count=1 \(max=0.\d+ avg=0.\d+\
 
 # should just add an 'other' sample
 $dp->start_sample_period;
+1 for (0..1000);
 $dp->end_sample_period;
 
-is $dp->period_start_time, 0;
+is $dp->period_start_time, 0, 'period_start_time should be 0 after end_sample_period';
 
 my @text = $dp->profile_as_text();
 is @text, 2;
 is $text[0], $text, 'should be same as before';
-like $text[1], qr/^dp_ex>1000000000>other>other: dur=0.\d+ count=1 \(max=0.\d+ avg=0.\d+\)\n$/;
+like $text[1], qr/^dp_ex>1000000000>other>other: dur=0.\d+ count=1 \(max=0.\d+ avg=0.\d+\)\n$/,
+    "the 'other' (period_exclusive) sample should be formatted ok"
+    .sprintf(" (overhead=%.6f, inner=%.6f)", $sample_overhead_time, $sample_inner_time);
 
 $dp->reset_profile_data;
 
@@ -108,7 +114,7 @@ for (1..2) {    # 200 samples over 2 periods
 }
 #warn Dumper($dbi_profile);
 is $dbi_profile->{Data}{1000000000}{c1}{c2}[0], 200;
-is $dbi_profile->{Data}{1000000000}{ex}{ex}[0], 2; # not three because one period had no counts
+is $dbi_profile->{Data}{1000000000}{ex}{ex}[0], 3;
 $dp->propagate_period_count();
 is $dbi_profile->{Data}{1000000000}{c1}{c2}[0], 3;
 is $dbi_profile->{Data}{1000000000}{ex}{ex}[0], 3;
@@ -117,32 +123,32 @@ $dp->reset_profile_data;
 
 __END__
 
-                                                                                 'Data' => {
-                                                                                             '1000000000' => {
-                                                                                                               'excl' => {
-                                                                                                                           'excl' => [
-                                                                                                                                       2,
-                                                                                                                                       '0.0026402473449707',
-                                                                                                                                       '0.00132417678833008',
-                                                                                                                                       '0.00131607055664062',
-                                                                                                                                       '0.00132417678833008',
-                                                                                                                                       '1184948308.1452',
-                                                                                                                                       '1184948308.14687'
-                                                                                                                                     ]
-                                                                                                                         },
-                                                                                                               'c1' => {
-                                                                                                                         'c2' => [
-                                                                                                                                   200,
-                                                                                                                                   '0.000652790069580078',
-                                                                                                                                   '4.05311584472656e-06',
-                                                                                                                                   '2.86102294921875e-06',
-                                                                                                                                   '4.05311584472656e-06',
-                                                                                                                                   '1184948308.14488',
-                                                                                                                                   '1184948308.14815'
-                                                                                                                                 ]
-                                                                                                                       }
-                                                                                                             }
-                                                                                           },
+    'Data' => {
+                '1000000000' => {
+                                'excl' => {
+                                            'excl' => [
+                                                        2,
+                                                        '0.0026402473449707',
+                                                        '0.00132417678833008',
+                                                        '0.00131607055664062',
+                                                        '0.00132417678833008',
+                                                        '1184948308.1452',
+                                                        '1184948308.14687'
+                                                        ]
+                                            },
+                                'c1' => {
+                                            'c2' => [
+                                                    200,
+                                                    '0.000652790069580078',
+                                                    '4.05311584472656e-06',
+                                                    '2.86102294921875e-06',
+                                                    '4.05311584472656e-06',
+                                                    '1184948308.14488',
+                                                    '1184948308.14815'
+                                                    ]
+                                        }
+                                }
+            },
 
 
 1;
